[gd_scene load_steps=4 format=3 uid="uid://1h4i0djhchy0"]

[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="1_4134a"]
[ext_resource type="Texture2D" uid="uid://cr310i6kr716" path="res://assets/player.png" id="2_ohgwh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_14l1j"]
radius = 2.47001

[node name="player" type="CharacterBody2D"]
scale = Vector2(1.28027, 1.28027)
collision_layer = 3
motion_mode = 1
script = ExtResource("1_4134a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ohgwh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_14l1j")

[node name="Mouse" type="Node2D" parent="."]

[node name="top" type="Area2D" parent="Mouse"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mouse/top"]
polygon = PackedVector2Array(-5.4676, -5.4676, -249.947, -249.947, 249.947, -249.947, 5.4676, -5.4676)

[node name="left" type="Area2D" parent="Mouse"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mouse/left"]
polygon = PackedVector2Array(-5.4676, -5.4676, -249.947, -249.947, -250.728, 250.728, -5.4676, 5.4676)

[node name="bottom" type="Area2D" parent="Mouse"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mouse/bottom"]
polygon = PackedVector2Array(-5.4676, 5.4676, -249.947, 250.728, 250.728, 249.947, 5.4676, 5.4676)

[node name="right" type="Area2D" parent="Mouse"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mouse/right"]
polygon = PackedVector2Array(5.4676, -5.4676, 249.947, -249.947, 249.947, 249.947, 5.4676, 5.4676)

[node name="self" type="Area2D" parent="Mouse"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mouse/self"]
polygon = PackedVector2Array(-5.4676, -5.4676, -5.4676, 5.4676, 5.4676, 5.4676, 5.4676, -5.4676)

[node name="MineCooldown" type="Timer" parent="."]

[connection signal="mouse_entered" from="Mouse/top" to="." method="_on_top_mouse_entered"]
[connection signal="mouse_entered" from="Mouse/left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_entered" from="Mouse/bottom" to="." method="_on_bottom_mouse_entered"]
[connection signal="mouse_entered" from="Mouse/right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_entered" from="Mouse/self" to="." method="_on_self_mouse_entered"]
[connection signal="timeout" from="MineCooldown" to="." method="_on_mine_cooldown_timeout"]
